remove throws, replace user methods